--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
     "name": "sally",
-    "version" : "0.1.0",
+    "version" : "0.0.1",
     "description": "A tool that distributes SSA suites to a cluster in order to test load",
     "author": "Pete Diemert <pete_diemert@msn.com>",
-    "dependencies": {"zmq" : ">= 2.0.0"},
+    "dependencies": {"zmq" : ">= 2.0.0", "underscore" : ">= 1.3.0"},
     "devDependencies":{},
     "engine": "node >= 0.4.12",
     "main" : "./lib/index.js",
