--- a/package.json
+++ b/package.json
@@ -3,7 +3,14 @@
     "version" : "0.0.6",
     "description": "A tool that distributes SSA suites to a cluster in order to test load",
     "author": "Pete Diemert <pete_diemert@msn.com>",
-    "dependencies": {"zmq" : ">= 2.0.0", "underscore" : ">= 1.3.0"},
+    "dependencies": {
+        "zmq" : ">= 2.0.0",
+        "ssa" : ">= 0.1.15",
+        "underscore" : ">= 1.3.1",
+        "eyes" : ">= 0.1.7",
+        "commander" : ">= 0.5.2",
+        "events" : ">= 0.4.0"
+     },
     "devDependencies":{},
     "engine": "node >= 0.4.12",
     "main" : "./lib/index.js",
