--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
     "name": "sally",
-    "version" : "0.1.8",
+    "version" : "0.1.9",
     "description": "A tool that distributes SSA suites to a cluster in order to test load",
     "author": "Pete Diemert <pete_diemert@msn.com>",
     "dependencies": {
-        "zmq" : ">= 2.0.0",
+        "zmq" : "2.0.0",
         "ssa" : ">= 0.1.20",
         "underscore" : ">= 1.3.1",
         "eyes" : ">= 0.1.7",
