--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "A tool that distributes SSA suites to a cluster in order to test load",
     "author": "Pete Diemert <pete_diemert@msn.com>",
     "dependencies": {
-        "zmq" : "2.0.0",
+        "zmq" : "*",
         "ssa" : ">= 0.1.20",
         "underscore" : ">= 1.3.1",
         "eyes" : ">= 0.1.7",
